# aspire-rust

./: METRICS.md  README.md  aspire-rust.slnx  test-metrics.ps1
AspireAppHost/: AppHost.cs  AspireAppHost.csproj
AspireAppHost/Properties/: launchSettings.json
rustwebapi/: Cargo.toml
rustwebapi/src/: main.rs
