[package]
name = "rustwebapi"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.13.1", features = ["tls-webpki-roots"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# Use rustls with ring crypto provider (requires Visual C++ build tools)
# If build fails, install Visual Studio Build Tools with C++ support
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-platform-verifier = "0.6"
